Fix text cutoff

--- a/comet-scan-ui/src/pages/Overview/OverviewPage.module.scss
+++ b/comet-scan-ui/src/pages/Overview/OverviewPage.module.scss
@@ -5,8 +5,10 @@
     align-items: center;
     color: var(--text-color);
     > div {
+        height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: center;
     }
 }
 
